Bug 334380 - Notes content is not persisted
Summary: Notes content is not persisted
Status: RESOLVED FIXED
Alias: None
Product: umbrello
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.12.97
Platform: unspecified Linux
: NOR normal
Target Milestone: ---
Assignee: Ralf Habacker
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-05-05 15:13 UTC by Grégoire Paris
Modified: 2014-05-22 19:09 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 4.13.1
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Grégoire Paris 2014-05-05 15:13:26 UTC
When trying to add a note to an activity diagram, it is as if the contents does not get saved

Reproducible: Always

Steps to Reproduce:
1. Add a note
2. Double-click on it
3. Type some text
4. Click Ok.
Actual Results:  
The note is still blank, even after resizing. a grep for the content on the xmi file doesn't show any results. Editing the note doesn't show the content

Expected Results:  
The note should display.
Comment 1 Ralf Habacker 2014-05-05 17:04:17 UTC
The problem here is that the documentation window content is not in sync with this documentation dialog. After closing the doc dialog the documentation window overwrites the widgets documentation.
Comment 2 Ralf Habacker 2014-05-05 17:26:33 UTC
(In reply to comment #1)
> The problem here is that the documentation window content is not in sync
> with this documentation dialog. After closing the doc dialog the
> documentation window overwrites the widgets documentation.

The question is if we really need this additional documentation dialog ? 
We already have the documentation window, which - on a note widget double click - simply needs 
- to be set visible if not before, 
- to be focused and 
- the cursor placed into the edit field 

That would solve all this problems.
Comment 3 Oliver Kellogg 2014-05-05 18:10:05 UTC
(In reply to comment #2)
> The question is if we really need this additional documentation dialog ? 
> We already have the documentation window, which - on a note widget double
> click - simply needs 
> - to be set visible if not before, 
> - to be focused and 
> - the cursor placed into the edit field 
> 
Sounds good to me - simpler yet better.
+1
Comment 4 Andi Fischer 2014-05-05 20:44:40 UTC
If you have a lot of objects in your diagram you can simply click on the objects to see the documentation. That's much simpler than double clicking on an object and closing the dialog window again, which also hides your diagram.

I have the hope, that this bug can be fixed maybe with a signal/slot mechanism. 

Do not remove a good feature
-1
Comment 5 Oliver Kellogg 2014-05-05 23:04:27 UTC
(In reply to comment #4)
> If you have a lot of objects in your diagram you can simply click on the
> objects to see the documentation. That's much simpler than double clicking
> on an object and closing the dialog window again, which also hides your
> diagram.
> 
> I have the hope, that this bug can be fixed maybe with a signal/slot
> mechanism. 
> 
> Do not remove a good feature
> -1

I was not voting to remove the documentation window!
On the contrary, I was voting to remove the extra popup dialog on double clicking on a note widget, and updating the doc window instead.
Comment 6 Ralf Habacker 2014-05-06 02:36:51 UTC
(In reply to comment #2)
> (In reply to comment #1)
> > The problem here is that the documentation window content is not in sync
> > with this documentation dialog. After closing the doc dialog the
> > documentation window overwrites the widgets documentation.
The problem is not bound to note widgets. It happens for *any* widget editing through the property window.
Comment 7 Ralf Habacker 2014-05-07 15:15:06 UTC
Git commit 0481912e8bf08976ceeb10a820d81e99a6af6bcd by Ralf Habacker.
Committed on 07/05/2014 at 15:01.
Pushed by habacker into branch 'master'.

Fix bug 'Notes content is not persistent.'

The bug has been fixed by editing note widget text through the documentation window
instead of the special note widget dialog.

This commit open a way to use the documentation window as property editor.
GUI

M  +0    -1    umbrello/CMakeLists.txt
D  +0    -74   umbrello/dialogs/notedialog.cpp
D  +0    -41   umbrello/dialogs/notedialog.h
M  +6    -0    umbrello/docwindow.cpp
M  +1    -0    umbrello/docwindow.h
M  +2    -10   umbrello/widgets/notewidget.cpp

http://commits.kde.org/umbrello/0481912e8bf08976ceeb10a820d81e99a6af6bcd
Comment 8 Ralf Habacker 2014-05-07 16:26:35 UTC
Git commit 911780cce5793208967ec729ce434b2f3b823f60 by Ralf Habacker.
Committed on 07/05/2014 at 15:01.
Pushed by habacker into branch 'KDE/4.13'.

Fix bug 'Notes content is not persistent.'

The bug has been fixed by editing note widget text through the documentation window
instead of the special note widget dialog.

This commit open a way to use the documentation window as property editor.
FIXED-IN:4.13.1
GUI

(cherry picked from commit 0481912e8bf08976ceeb10a820d81e99a6af6bcd)

M  +0    -1    umbrello/CMakeLists.txt
D  +0    -74   umbrello/dialogs/notedialog.cpp
D  +0    -41   umbrello/dialogs/notedialog.h
M  +6    -0    umbrello/docwindow.cpp
M  +1    -0    umbrello/docwindow.h
M  +2    -10   umbrello/widgets/notewidget.cpp

http://commits.kde.org/umbrello/911780cce5793208967ec729ce434b2f3b823f60