Fix bug 'Notes content is not persistent.'

The bug has been fixed by editing note widget text through the documentation window
instead of the special note widget dialog.

This commit open a way to use the documentation window as property editor.

BUG: 334380
FIXED-IN:4.13.1
GUI

(cherry picked from commit 0481912e8bf08976ceeb10a820d81e99a6af6bcd)